group 'livelessons'
version '1.0-SNAPSHOT'

apply plugin: 'java'

java.targetCompatibility = JavaVersion.VERSION_18
java.sourceCompatibility = JavaVersion.VERSION_18

repositories {
    mavenCentral()
}

